# zapzap

./: CLAUDE.md  MAP.md  README.md  md-snapshot.py
ZZWorkspace.xcworkspace/: contents.xcworkspacedata
ZapZap Shared/: Effects.swift  GameBoardAnimations.swift  GameBoardLogic.swift  GameManager.swift  GraphicsLayer.swift  MAP.md  Math.swift  Meshes.swift  ObjectPool.swift  Renderer.swift  ShaderTypes.h  Shaders.metal
ZapZap Shared/GAME LOGIC/: BotPlayer.swift  GameBoardLogic.swift  GameManager.swift  GameObjects.swift  MAP.md  MultiplayerManager.swift  ZapGame.swift
ZapZap Shared/GFX LOGIC/: GameBoardAnimations.swift  GraphicsLayer.swift  MAP.md  Renderer.swift  Screen.swift  Shaders.metal
ZapZap Shared/MESHES/: ElectricArcMesh.swift  MAP.md  Meshes.swift  ParticleEffects.swift  UIMeshes.swift  (+1 more)
ZapZap iOS/: AppDelegate.swift  GameViewController.swift  MAP.md
ZapZap macOS/: AppDelegate.swift  GameViewController.swift  MAP.md
ZapZap.xcodeproj/: project.pbxproj
docs/: ARCHITECTURE.md  DECISIONS.md  LEGACY_AUDIT.md  PLAN.md  VISION.md
zapzap-native/: .gitignore  AGENTS.md  Cargo.toml  Makefile  TODO.md  index.html  package-lock.json  package.json  repo-source-blob.py  vite.config.ts
zapzap-native/crates/engine/: Cargo.toml
zapzap-native/crates/engine/src/: assets.rs  camera.rs  input.rs  lib.rs  renderer.rs  sprite.rs
zapzap-native/crates/zapzap/: Cargo.toml
zapzap-native/crates/zapzap/src/: bridge.rs  components.rs  grid.rs  lib.rs  state.rs
zapzap-native/crates/zapzap/src/systems/: animation.rs  board.rs  bonus.rs  bot.rs  effects.rs  mod.rs
(+34 files in other folders)
