[package]
name = "zapzap-engine"
version = "0.1.0"
edition = "2021"
description = "Generic 2D WebGPU engine for sprite-based games"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "24.0"
bytemuck = { version = "1.21", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
log = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "GpuCanvasContext",
    "Window",
    "Document",
    "Element",
    "Navigator",
    "Gpu",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1"
console_error_panic_hook = "0.1"
