[package]
name = "zapzap-sim"
version = "0.1.0"
edition = "2021"
description = "ZapZap game logic and WASM bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
zapzap-engine = { path = "../engine" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
] }
wasm-bindgen-futures = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
